--- a/templates/_cluster_observability.html
+++ b/templates/_cluster_observability.html
@@ -25,13 +25,13 @@
             <div class="widget"><div class="widget-header"><h2>Node Status</h2></div><div class="widget-content chart-widget-content"><canvas id="nodeStatusChart"></canvas></div></div>
             <div class="widget"><div class="widget-header"><h2>Container Restarts (Sum)</h2></div><div class="widget-content chart-widget-content"><canvas id="containerRestartsChart"></canvas></div></div>
         </div>
-        
+<!--         
         <h3 class="section-title">Nodes Status and Capacity</h3>
         <div class="metrics-grid-2col">
             <div class="widget"><div class="widget-header"><h2>Number of Ready Nodes</h2></div><div class="widget-content chart-widget-content"><canvas id="numReadyNodesChart"></canvas></div></div>
             <div class="widget"><div class="widget-header"><h2>Nodes Error Condition</h2></div><div class="widget-content chart-widget-content"><canvas id="nodesErrorConditionChart"></canvas></div></div>
             <div class="widget"><div class="widget-header"><h2>Running Pods per Node</h2></div><div class="widget-content chart-widget-content"><canvas id="runningPodsPerNodeChart"></canvas></div></div>
-        </div>
+        </div> -->
 
         <h3 class="section-title">Node Performance</h3>
         <div class="metrics-grid-2col">
